# rust-actix-surrealdb

./: Cargo.toml  README.md  SurrealDB Todo.postman_collection.json
src/: api.rs  db.rs  error.rs  main.rs  model.rs  prelude.rs
static/: index.html  script.js  style.css
