[package]
name = "rust_actix_surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
derive_more = { version = "1.0.0", features = ["full"] }
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
surrealdb = "2.0.4"
thiserror = "2.0.3"
